2012-07-08 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-23
	* gcc 4.7.0 strict aligment compiler fix
	* reduce number of warnings when discard is received before
	  DQM cell ready-to-discard has finished

2012-07-05 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-22
	* OSX version doesn't support std::timed_mutex yet

2012-07-02 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-21
	* setting discard counters before sending event
	* atomic global counter for dqm discard/send bookkeeping

2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-20
	* two threads running crashed EP handler locked out from running
	  it at the same time
	* I2O (except lumi) protected by transition lock
	* Lumi I2O will abort writing all raw cells if Stop arrives
	* removing pid not fatal if not present
	* note: V01-00-19 contains gcc 4.7.0 fixes

2012-05-28 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-18
	* putting back in the waiting for dqm discards before attempting
	  empty event write

2012-05-27 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-17
	* putting back in 01-00-15 (was not the problem)

2012-05-24 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-16
	* revert to waiting for dqm cells to be empty
	  (seems to cause RB to stop before EP's disconnect)

2012-05-23 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-15
	* fix late dqm cell discards on queued empty dqm cell
	* waiting for "send" workloops to exit before resetting shm

2012-05-10  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-14
	* Added lock between I2O SM discards & stopping
	* Improved input validation from SM I2O messages
	
2012-05-09  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-13
	* improved exception reporting from ShmBuffer
	* some input validation through I2O
	
2012-05-03  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-12
	* fixed some LOG4CPLUS messages
	
2012-05-02  Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-11