@@ -1,3 +1,11 @@
+2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V01-00-24
+	* add debug logs when in stopping problem
+	* display status of semaphores before emergency stop
+	* watchdog thread with a timeout during shutting down clients
+	* using trylock on the resource lock when going to emergencyStop
+
 2012-07-08 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-00-23
